# mpv_audio_kit

./: .gitignore  .pubignore  BUILD.md  CHANGELOG.md  LICENSE  Makefile  README.md  analysis_options.yaml  build.yaml  pubspec.yaml
.claude/: settings.json
.github/workflows/: build_libs.yml
android/: build.gradle.kts  settings.gradle.kts
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  mpv_audio_kit_jni.c
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart  player_page.dart
example/lib/models/: stream_category.dart
example/lib/player/: logs_tab.dart  playback_tab.dart  queue_tab.dart
example/lib/screens/: player_page.dart  settings_page.dart
example/lib/services/: audio_handler.dart  settings_service.dart
example/lib/settings/: settings_page.dart
example/lib/shared/: property_cards.dart  snack_messenger.dart
example/lib/theme/: app_metrics.dart  app_theme.dart
example/lib/widgets/: eq_widget.dart  property_cards.dart  ui_helpers.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner/: AppDelegate.swift  DebugProfile.entitlements  Release.entitlements
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/RunnerTests/: RunnerTests.swift
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: mpv_audio_kit.podspec  mpv_audio_pro_kit.podspec
ios/Classes/: MpvAudioKitPlugin.swift
ios/Frameworks/libmpv.xcframework/: Info.plist
ios/mpv_audio_kit/: Package.swift
lib/: mpv_audio_kit.dart  mpv_audio_pro_kit.dart  uri_resolver_flutter.dart
lib/src/: event_isolate.dart  exceptions.dart  library_loader.dart  mpv_audio_kit.dart  mpv_bindings.dart  mpv_player.dart  player.dart  player_state.dart  player_stream.dart  player_types.dart
lib/src/audio/: audio_device.dart  audio_output_error.dart  audio_output_state.dart  audio_params.dart  gapless_mode.dart  replay_gain_config.dart
lib/src/cover/: audio_display_mode.dart  cover_art_auto_mode.dart  cover_art_extractor.dart  cover_art_processor.dart  cover_art_raw.dart
lib/src/dsp/: audio_filter_chain.dart  compressor_config.dart  equalizer_config.dart  loudness_config.dart  pitch_tempo_config.dart
lib/src/events/: mpv_hook_event.dart  mpv_log_entry.dart  mpv_player_error.dart
lib/src/internal/: audio_filter_chain.dart  (+5 more)
linux/: CMakeLists.txt  mpv_audio_kit_plugin.cc  mpv_audio_kit_plugin_private.h
linux/include/mpv_audio_kit/: mpv_audio_kit_plugin.h
macos/: mpv_audio_kit.podspec  mpv_audio_pro_kit.podspec
macos/Classes/: MpvAudioKitPlugin.swift
macos/mpv_audio_kit/: Package.swift
release_builds/: checksums.txt
scripts/: DEVELOPER_GUIDE.md  README.md  build_libmpv_android.sh  build_libmpv_ios.sh  build_libmpv_linux.sh  build_libmpv_macos.sh  build_libmpv_windows.sh  generate_checksums.ps1  generate_checksums.sh
scripts/docker/: Dockerfile
test/: player_no_init_test.dart
test/_helpers/: codec.dart  libmpv_resolver.dart  mpv_error_capture.dart  setter_test_helpers.dart
test/event_isolate/: decode_mpv_node_test.dart
test/fixtures/: multitrack_two_audio.mka  sine_5s.flac  sine_88200hz.flac  with_chapters.mka
test/internal/: audio_effects_coverage_test.dart  audio_effects_test.dart  audio_filter_chain_test.dart  audio_output_error_test.dart  derive_loop_test.dart  derive_playlist_mode_test.dart  json_parsers_test.dart  lifecycle_transitions_test.dart  node_parsers_test.dart  orphan_handle_tracker_test.dart  playback_lifecycle_test.dart  playback_state_test.dart  to_string_pin_test.dart  uri_resolver_test.dart  window_function_test.dart
test/models/: audio_device_test.dart  audio_filter_test.dart  audio_params_test.dart  enums_test.dart  media_test.dart  mpv_player_error_test.dart  mpv_prefetch_state_test.dart  player_configuration_test.dart  player_state_test.dart  playlist_test.dart
test/reactive/: default_specs_test.dart  mpv_property_spec_permissive_test.dart  property_registry_test.dart  reactive_property_test.dart
test/runtime/: player_runtime_test.dart
test/runtime_extended/: audio_effects_chain_runtime_test.dart  codec_coverage_test.dart  cover_art_raw_test.dart  cover_art_test.dart  dispose_during_load_test.dart  dispose_during_seek_test.dart  dispose_escape_hatches_test.dart  dispose_immediate_test.dart  dispose_safety_test.dart  dispose_setters_state_error_test.dart  dispose_timing_test.dart  edge_cases_test.dart  error_paths_audio_output_test.dart  error_paths_test.dart  event_isolate_initial_burst_test.dart  finalizer_safety_net_test.dart  gapless_playback_test.dart  hook_priority_test.dart  http_header_isolation_test.dart  isolation_guard_test.dart  lifecycle_races_test.dart  metadata_test.dart  numeric_setter_finite_test.dart  playback_lifecycle_stream_test.dart  playback_state_stream_test.dart  raw_af_guard_symmetry_test.dart  registry_coverage_test.dart  robustness_test.dart  runtime_state_test.dart  setters_async_escape_test.dart  setters_audio_basic_test.dart  setters_audio_output_test.dart  setters_cache_test.dart  setters_chapter_test.dart  setters_dsp_test.dart  setters_hooks_test.dart  setters_image_display_test.dart  setters_network_test.dart  setters_open_prefetch_test.dart  setters_playback_test.dart  (+8 more)
test/utils/: duration_seconds_test.dart
test_app/: README.md  pubspec.yaml
test_app/integration_test/: android_audiotrack_test.dart  codec_coverage_test.dart  smoke_test.dart  tls_handshake_test.dart
test_app/lib/: main.dart
test_app/linux/: CMakeLists.txt
test_app/windows/: CMakeLists.txt
windows/: CMakeLists.txt  mpv_audio_kit_plugin.cpp  mpv_audio_kit_plugin.h  mpv_audio_kit_plugin_c_api.cpp
windows/include/mpv_audio_kit/: mpv_audio_kit_plugin_c_api.h
(+255 files in other folders)
